# hald-addon-bme

./: .gitignore  10-bme.fdi  Makefile  Makefile.am  README.properties  antigen.sh  autogen.sh  configure.ac  hald-addon-bme.c
debian/: changelog  control  copyright  docs  rules
src/: Makefile.am  hald-addon-bme.c  hald-addon-bme.h
